// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements ParameterElement given schema field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ParameterElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ParameterElement given schema field of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(ParameterElement
  (MemberElement
    (StringElement)
    (SchemaElement)))
`;

exports[`refractor elements ParameterElement should refract to semantic ApiDOM tree 1`] = `
(ParameterElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
